--- a/signup.html
+++ b/signup.html
@@ -11,36 +11,39 @@
   <body>
     <div class="container">
       <img src="Blockchain.png" alt="stock image">
-      <form>
-        <h1>SIGN UP</h1>
-        <p class="inputBar">
-          <i class='bx bxs-user'></i>
-          <input type="text" placeholder="USERNAME" required>
-        </p>
-        <p class="inputBar">
-          <i class='bx bxs-envelope'></i>
-          <input type="email" placeholder="EMAIL" required>
-        </p>
-        <p class="inputBar">
-          <i class='bx bxs-phone'></i>
-          <input type="tel" placeholder="PHONE" required>
-        </p>
-        <p class="inputBar">
-          <i class='bx bxs-cake'></i>
-          <input type="number" placeholder="AGE" required>
-        </p>
-        <p class="inputBar">
-          <i class='bx bxs-lock'></i>
-          <input type="password" minlength="8" placeholder="PASSWORD" required>
-        </p>
-        <p class="inputBar">
-          <input type="submit" value="SIGN UP" class="signup">
-        </p>
-        <p>
-          <input type="radio" class="terms" required>
-          <label>I accept the terms and conditions</label>
-        </p>
-      </form>
+      <div class="formContainer">
+        <form>
+          <h1>SIGN UP</h1>
+          <p class="inputBar">
+            <i class='bx bxs-user'></i>
+            <input type="text" placeholder="USERNAME" required>
+          </p>
+          <p class="inputBar">
+            <i class='bx bxs-envelope'></i>
+            <input type="email" placeholder="EMAIL" required>
+          </p>
+          <p class="inputBar">
+            <i class='bx bxs-phone'></i>
+            <input type="tel" placeholder="PHONE" required>
+          </p>
+          <p class="inputBar">
+            <i class='bx bxs-cake'></i>
+            <input type="number" placeholder="AGE" required>
+          </p>
+          <p class="inputBar">
+            <i class='bx bxs-lock'></i>
+            <input type="password" minlength="8" placeholder="PASSWORD" required>
+          </p>
+          <p class="inputBar">
+            <input type="submit" value="SIGN UP" class="signup">
+          </p>
+          <p>
+            <input type="radio" class="terms" required>
+            <label>I accept the <a href="#">terms and conditions</a></label>
+          </p>
+        </form>
+        <a href="index.html" class="signin">Already have an account? Sign in here.</a>
+      </div>
     </div>
   </body>
 </html>
