--- a/Reset.html
+++ b/Reset.html
@@ -8,20 +8,20 @@
             <link rel="stylesheet" href="Signin.css"/>
         </head>
         <body>
-            
+
         <div class="Container">
            <div class="formcontainer">
                 <div class="slidesection">
                     <img src="Image3.jpg" alt="Description image" />
                 </div>
-                <form class="formsection" id="Login3"><br/><br/>
+                <form class="formsection" id="Login3">
                     <h3>____________Insert your Email____________</h3>
                     <div class="inputRow">
                         <div class="inputicon">
                             <i class='bx bxs-envelope'></i>
                         </div>
                         <input type="email" id="email"  placeholder="EMAIL" required/>
-                    </div><br/>
+                    </div>
                      <h3>_______Create your new Password________</h3>
                     <div class="inputRow">
                         <div class="inputicon">
@@ -34,17 +34,17 @@
                            <i class='bx bxs-lock'></i>
                         </div>
                         <input type="password" minlength="8" id="Mdp"  placeholder="CONFIRM PASSWORD"required/>
-                    </div><br/>
+                    </div>
                     <div class="btnRow">
                         <input type="submit" class="submit" value="Reset" id="loginbtn"/>
                     </div>
                     <div class="warning">
                             <h6><a href="Signin.html">You can now Sign in with your new password</a></h6>
                     </div>
-                
-                    </form> 
+
+                    </form>
                 </div>
-           </div> 
+           </div>
         </div>
         <script src="Doc3.js"></script>
         </body>
