--- a/Signup.html
+++ b/Signup.html
@@ -14,7 +14,7 @@
                 <div class="slidesection">
                     <img src="Image 2.jpg" alt="Description image" />
                 </div>
-                <form class="formsection" id="Login2">
+                <form class="formsection" id="Login2" action="signup.html">
                     <h1>SIGN UP</h1>
                     <div class="inputRow">
                         <div class="inputicon">
