--- a/Reset.html
+++ b/Reset.html
@@ -33,10 +33,10 @@
                         <div class="inputicon">
                            <i class='bx bxs-lock'></i>
                         </div>
-                        <input type="password" minlength="8" id="Mdp"  placeholder="CONFIRM PASSWORD"required/>
+                        <input type="password" minlength="8" id="Mdp2"  placeholder="CONFIRM PASSWORD"required/>
                     </div>
                     <div class="btnRow">
-                        <input type="submit" class="submit" value="Reset" id="loginbtn"/>
+                        <input type="submit" class="submit" value="Reset" id="loginbtn" onclick="check()"/>
                     </div>
                     <div class="warning">
                             <h6><a href="Signin.html">You can now Sign in with your new password</a></h6>
