--- a/Signin.html
+++ b/Signin.html
@@ -36,7 +36,7 @@
                             <a href="Reset.html">Forgot your Password ?</a>
                         </div>
                         <div class="btnRow">
-                            <input type="submit" value="LOGIN" class="submit" id="loginbtn"/>
+                            <input type="submit" value="LOGIN" class="submit" id="loginbtn" onclick="check()"/>
                         </div>
                         <div class="warning">
                             <a href="Signup.html">Create an account</a>
