--- a/Signup.html
+++ b/Signup.html
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                     <div class="btnRow">
-                        <input type="submit" value="CREATE" class="submit" id="loginbtn"/>
+                        <input type="submit" value="CREATE" class="submit" id="loginbtn" onclick="store()"/>
                     </div>
                     <div class="warning">
                         <h5><a href="Signin.html">I already have an account</a></h5>
