--- a/Signin.html
+++ b/Signin.html
@@ -39,7 +39,7 @@
                             <input type="submit" value="LOGIN" class="submit" id="loginbtn" onclick="check()"/>
                         </div>
                         <div class="warning">
-                            <a href="Signup.html">Create an account</a>
+                            <a href="index.html">Create an account</a>
                         </div>
                 </form>
                 <p style="color:red;" id="erreur"></p>
